force-app/main/default/objects/Customer_Idea__c/Customer_Idea__c.object-meta.xml
<CustomObject>
    <label>Customer Idea</label>
    <nameField>
        <displayFormat>CI-{00000}</displayFormat>
        <label>Customer Idea #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Ideas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>