force-app/main/default/objects/Customer_Idea__c/fields/Carrier_Type__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Type__c</fullName>
    <formula>TEXT(Account__r.Carrier_Type__c)</formula>
    <label>Carrier Type</label>
    <type>Text</type>
</CustomField>