force-app/main/default/objects/Customer_Idea__c/fields/Committed__c.field-meta.xml
<CustomField>
    <fullName>Committed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Division has committed to deliver this to the customer.</inlineHelpText>
    <label>Committed</label>
    <type>Checkbox</type>
</CustomField>