force-app/main/default/objects/Customer_Idea__c/fields/Idea__c.field-meta.xml
<CustomField>
    <fullName>Idea__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Idea</label>
    <referenceTo>Idea</referenceTo>
    <relationshipName>Customer_Ideas</relationshipName>
    <type>Lookup</type>
</CustomField>