force-app/main/default/objects/Customer_Idea__c/fields/Number_of_Trucks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Trucks__c</fullName>
    <label>Number of Trucks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>