force-app/main/default/objects/Customer_Idea__c/fields/Operational_Profile__c.field-meta.xml
<CustomField>
    <fullName>Operational_Profile__c</fullName>
    <formula>TEXT(Account__r.Operational_Profile__c)</formula>
    <label>Operational Profile</label>
    <type>Text</type>
</CustomField>