force-app/main/default/objects/Customer_Idea__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>TEXT(Idea__r.Status)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>