force-app/main/default/objects/Customer_Idea__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>This is to identify the reason for the Customer Idea - whether it&apos;s Revenue Growth or for Customer Satisfaction</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Satisfaction</fullName>
            </value>
            <value>
                <fullName>Revenue Growth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>