force-app/main/default/objects/Customer_Idea__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value Proposition</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>